<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="codigo">codigo</string>
    <string name="nombre">nombre</string>
    <string name="precio">precio</string>
    <string name="descripcion">descripcion</string>
    <string name="buscar">buscar</string>
    <string name="actualizar">actualizar</string>
    <string name="borrar">borrar</string>
    <string name="modificar">modificar</string>
    <string name="limpiar">limpiar</string>
    <string name="registrar">registrar</string>
    <string name="opciones">opciones</string>
    <string name="salir">salir</string>
    <string name="app_name">papeleria</string>
    <string name="title_activity_acercade">acercade</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombres">monica</string>
    <string name="control">11930110</string>

</resources>
