<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cod"
        android:inputType="text" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nom"
        />

    <TextView
        android:text="@string/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pre"
        />

    <TextView
        android:text="@string/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/des"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/registrar"
            android:onClick="registrar"
            android:text="@string/registrar"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buscar"
            android:onClick="buscar"
            android:text="@string/buscar"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/actualizar"
            android:onClick="modificar"
            android:text="@string/actualizar"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/borrar"
            android:onClick="borrar"
            android:text="@string/borrar"/>

         <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/limpiar"
            android:onClick="limpiar"
            android:text="@string/limpiar"/>


    </LinearLayout>

</LinearLayout>

    </ScrollView>